[gd_scene load_steps=4 format=3 uid="uid://cfr6bbwd7xgrt"]

[ext_resource type="Script" path="res://scenes/entities/projectiles/hook_projectile/hook_projectile.gd" id="1_ymu5m"]
[ext_resource type="Texture2D" uid="uid://bh35rl8ygja7m" path="res://icon.svg" id="2_a8u6p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k1yrk"]

[node name="HookProjectile" type="Area2D"]
script = ExtResource("1_ymu5m")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.17233e-07, -5.36442e-07)
scale = Vector2(0.078, 0.117)
texture = ExtResource("2_a8u6p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_k1yrk")

[node name="RopeLine" type="Line2D" parent="."]
top_level = true
width = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
